# pythonProject_2_project

./: .gitignore  README.md  main.py  pyproject.toml
src/: api.py  api_connector.py  file_connector.py  hh_api.py  interaction.py  main.py  storage.py  user_interface.py  utils.py  vacancies.json  vacancy.py
tests/: test_api.py  test_api_connector.py  test_file_connector.py  test_hh_api.py  test_interaction.py  test_user_interface.py  test_utils.py  test_vacancy.py
